fix actions prod wrong git pull

--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -46,7 +46,7 @@ jobs:
           else
               echo "Repository found. Pulling latest changes..."
               cd app/production
-              git pull origin production
+              git pull origin main
           fi
           ls -la  # Debugging: Show contents
           EOT
