--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -50,7 +50,7 @@ jobs:
               # Enable pulling by marking as safe
               git config --global --add safe.directory ~/novatix/app/production
 
-              git pull origin production
+              git pull origin production --force
           fi
           ls -la  # Debugging: Show contents
           EOT
