--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -59,35 +59,36 @@ jobs:
           EOT
           chmod +x ~/novatix/setups/update_repo_prod.sh
 
-          # Ensure generate_env_prod.sh exists
+          # Create generate_env_prod.sh script
           echo "Creating generate_env_prod.sh..."
-          cat > ~/novatix/setups/generate_env_prod.sh << 'EOT'
+          cat > "$HOME/novatix/setups/generate_env_prod.sh" <<EOT
           #!/bin/bash
 
-          ENV_DIR="$HOME/novatix/app/production"
-          PROD_ENV_FILE="$ENV_DIR/.env.production"
-          TARGET_ENV_FILE="$ENV_DIR/.env"
+          export ENV_DIR="$HOME/novatix/app/production"
+          PROD_ENV_FILE="\$ENV_DIR/.env.production"
+          TARGET_ENV_FILE="\$ENV_DIR/.env"
 
           echo "Checking if .env.production exists..."
-          if [ ! -f "$PROD_ENV_FILE" ]; then
+          if [ ! -f "\$PROD_ENV_FILE" ]; then
               echo "Error: .env.production file not found!"
               exit 1
           fi
 
           echo "Backing up existing .env file (if exists)..."
-          if [ -f "$TARGET_ENV_FILE" ]; then
-              mv "$TARGET_ENV_FILE" "$TARGET_ENV_FILE.bak"
+          if [ -f "\$TARGET_ENV_FILE" ]; then
+              mv "\$TARGET_ENV_FILE" "\$TARGET_ENV_FILE.bak"
           fi
 
           echo "Copying .env.production to .env..."
-          cp "$PROD_ENV_FILE" "$TARGET_ENV_FILE"
+          cp "\$PROD_ENV_FILE" "\$TARGET_ENV_FILE"
 
-          chmod 660 "$TARGET_ENV_FILE"
+          chmod 660 "\$TARGET_ENV_FILE"
           echo ".env file copied successfully from .env.production."
-
           EOT
 
-          chmod +x ~/novatix/setups/generate_env_prod.sh
+          # Make the script executable
+          chmod +x "$HOME/novatix/setups/generate_env_prod.sh"
+          echo "generate_env_prod.sh created and made executable."
 
       - name: Update Repository on VPS
         run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/update_repo_prod.sh"
