--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -45,7 +45,10 @@ jobs:
 
       - name: 🛠 Set Up Laravel Environment
         run: |
-          cp .env.staging .env
+          ENV_DIR="$HOME/novatix/app/develop"
+          STAGING_ENV_FILE="\$ENV_DIR/.env.staging"
+          TARGET_ENV_FILE="\$ENV_DIR/.env"
+          cp "\$STAGING_ENV_FILE" "\$TARGET_ENV_FILE"
           php artisan key:generate
 
       - name: Install Node.js dependencies
@@ -148,7 +151,7 @@ jobs:
           cat > "$HOME/novatix/setups/generate_env.sh" <<EOT
           #!/bin/bash
 
-          export ENV_DIR="$HOME/novatix/app/develop"
+          ENV_DIR="$HOME/novatix/app/develop"
           STAGING_ENV_FILE="\$ENV_DIR/.env.staging"
           TARGET_ENV_FILE="\$ENV_DIR/.env"
 
