--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -174,6 +174,8 @@ jobs:
           chmod +x "$HOME/novatix/setups/generate_env.sh"
           echo "generate_env.sh created and made executable."
 
+          EOF
+
       - name: Update Repository on VPS
         run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/update_repo.sh"
 
