fix: generated seat_id

--- a/resources/js/Pages/Seat/seatConfig.json
+++ b/resources/js/Pages/Seat/seatConfig.json
@@ -1,5 +1,5 @@
 {
-    "venue_id": "0fdd1094-aff7-4daa-b2a4-200085648b00",
+    "venue_id": "0a817878-31bd-4a99-9242-d7afb4f42090",
     "layout": {
         "items": [
             { "position": "B9" },
@@ -655,328 +655,7 @@
             { "position": "M65" },
             { "position": "M66" },
             { "position": "M67" },
-            { "position": "M68" },
-
-            { "position": "N5" },
-            { "position": "N6" },
-            { "position": "N7" },
-            { "position": "N8" },
-            { "position": "N9" },
-            { "position": "N10" },
-            { "position": "N11" },
-            { "position": "N12" },
-            { "position": "N13" },
-            { "position": "N14" },
-            { "position": "N20" },
-            { "position": "N21" },
-            { "position": "N22" },
-            { "position": "N23" },
-            { "position": "N24" },
-            { "position": "N25" },
-            { "position": "N26" },
-            { "position": "N27" },
-            { "position": "N28" },
-            { "position": "N29" },
-            { "position": "N30" },
-            { "position": "N31" },
-            { "position": "N32" },
-            { "position": "N33" },
-            { "position": "N34" },
-            { "position": "N35" },
-            { "position": "N37" },
-            { "position": "N38" },
-            { "position": "N39" },
-            { "position": "N40" },
-            { "position": "N41" },
-            { "position": "N42" },
-            { "position": "N43" },
-            { "position": "N44" },
-            { "position": "N45" },
-            { "position": "N46" },
-            { "position": "N47" },
-            { "position": "N48" },
-            { "position": "N49" },
-            { "position": "N50" },
-            { "position": "N51" },
-            { "position": "N52" },
-            { "position": "N58" },
-            { "position": "N59" },
-            { "position": "N60" },
-            { "position": "N61" },
-            { "position": "N62" },
-            { "position": "N63" },
-            { "position": "N64" },
-            { "position": "N65" },
-            { "position": "N66" },
-            { "position": "N67" },
-
-            { "position": "O5" },
-            { "position": "O6" },
-            { "position": "O7" },
-            { "position": "O8" },
-            { "position": "O9" },
-            { "position": "O10" },
-            { "position": "O11" },
-            { "position": "O12" },
-            { "position": "O13" },
-            { "position": "O19" },
-            { "position": "O20" },
-            { "position": "O21" },
-            { "position": "O22" },
-            { "position": "O23" },
-            { "position": "O24" },
-            { "position": "O25" },
-            { "position": "O26" },
-            { "position": "O27" },
-            { "position": "O28" },
-            { "position": "O29" },
-            { "position": "O30" },
-            { "position": "O31" },
-            { "position": "O32" },
-            { "position": "O33" },
-            { "position": "O34" },
-            { "position": "O35" },
-            { "position": "O37" },
-            { "position": "O38" },
-            { "position": "O39" },
-            { "position": "O40" },
-            { "position": "O41" },
-            { "position": "O42" },
-            { "position": "O43" },
-            { "position": "O44" },
-            { "position": "O45" },
-            { "position": "O46" },
-            { "position": "O47" },
-            { "position": "O48" },
-            { "position": "O49" },
-            { "position": "O50" },
-            { "position": "O51" },
-            { "position": "O52" },
-            { "position": "O53" },
-            { "position": "O54" },
-            { "position": "O60" },
-            { "position": "O61" },
-            { "position": "O62" },
-            { "position": "O63" },
-            { "position": "O64" },
-            { "position": "O65" },
-            { "position": "O66" },
-            { "position": "O67" },
-            { "position": "O68" },
-            { "position": "O69" },
-
-            { "position": "P5" },
-            { "position": "P6" },
-            { "position": "P7" },
-            { "position": "P8" },
-            { "position": "P9" },
-            { "position": "P10" },
-            { "position": "P11" },
-            { "position": "P12" },
-            { "position": "P13" },
-            { "position": "P19" },
-            { "position": "P20" },
-            { "position": "P21" },
-            { "position": "P22" },
-            { "position": "P23" },
-            { "position": "P24" },
-            { "position": "P25" },
-            { "position": "P26" },
-            { "position": "P27" },
-            { "position": "P28" },
-            { "position": "P29" },
-            { "position": "P30" },
-            { "position": "P31" },
-            { "position": "P32" },
-            { "position": "P33" },
-            { "position": "P34" },
-            { "position": "P35" },
-            { "position": "P37" },
-            { "position": "P38" },
-            { "position": "P39" },
-            { "position": "P40" },
-            { "position": "P41" },
-            { "position": "P42" },
-            { "position": "P43" },
-            { "position": "P44" },
-            { "position": "P45" },
-            { "position": "P46" },
-            { "position": "P47" },
-            { "position": "P48" },
-            { "position": "P49" },
-            { "position": "P50" },
-            { "position": "P51" },
-            { "position": "P52" },
-            { "position": "P53" },
-            { "position": "P54" },
-            { "position": "P60" },
-            { "position": "P61" },
-            { "position": "P62" },
-            { "position": "P63" },
-            { "position": "P64" },
-            { "position": "P65" },
-            { "position": "P66" },
-            { "position": "P67" },
-            { "position": "P68" },
-
-            { "position": "Q5" },
-            { "position": "Q6" },
-            { "position": "Q7" },
-            { "position": "Q8" },
-            { "position": "Q9" },
-            { "position": "Q10" },
-            { "position": "Q11" },
-            { "position": "Q12" },
-            { "position": "Q18" },
-            { "position": "Q19" },
-            { "position": "Q20" },
-            { "position": "Q21" },
-            { "position": "Q22" },
-            { "position": "Q23" },
-            { "position": "Q24" },
-            { "position": "Q25" },
-            { "position": "Q26" },
-            { "position": "Q27" },
-            { "position": "Q28" },
-            { "position": "Q29" },
-            { "position": "Q30" },
-            { "position": "Q31" },
-            { "position": "Q32" },
-            { "position": "Q33" },
-            { "position": "Q34" },
-            { "position": "Q35" },
-            { "position": "Q37" },
-            { "position": "Q38" },
-            { "position": "Q39" },
-            { "position": "Q40" },
-            { "position": "Q41" },
-            { "position": "Q42" },
-            { "position": "Q43" },
-            { "position": "Q44" },
-            { "position": "Q45" },
-            { "position": "Q46" },
-            { "position": "Q47" },
-            { "position": "Q48" },
-            { "position": "Q49" },
-            { "position": "Q50" },
-            { "position": "Q51" },
-            { "position": "Q52" },
-            { "position": "Q53" },
-            { "position": "Q54" },
-            { "position": "Q60" },
-            { "position": "Q61" },
-            { "position": "Q62" },
-            { "position": "Q63" },
-            { "position": "Q64" },
-            { "position": "Q65" },
-            { "position": "Q66" },
-            { "position": "Q67" },
-
-            { "position": "R5" },
-            { "position": "R6" },
-            { "position": "R7" },
-            { "position": "R8" },
-            { "position": "R9" },
-            { "position": "R10" },
-            { "position": "R11" },
-            { "position": "R17" },
-            { "position": "R18" },
-            { "position": "R19" },
-            { "position": "R20" },
-            { "position": "R21" },
-            { "position": "R22" },
-            { "position": "R23" },
-            { "position": "R24" },
-            { "position": "R25" },
-            { "position": "R26" },
-            { "position": "R27" },
-            { "position": "R28" },
-            { "position": "R29" },
-            { "position": "R30" },
-            { "position": "R31" },
-            { "position": "R32" },
-            { "position": "R33" },
-            { "position": "R34" },
-            { "position": "R35" },
-            { "position": "R37" },
-            { "position": "R38" },
-            { "position": "R39" },
-            { "position": "R40" },
-            { "position": "R41" },
-            { "position": "R42" },
-            { "position": "R43" },
-            { "position": "R44" },
-            { "position": "R45" },
-            { "position": "R46" },
-            { "position": "R47" },
-            { "position": "R48" },
-            { "position": "R49" },
-            { "position": "R50" },
-            { "position": "R51" },
-            { "position": "R52" },
-            { "position": "R53" },
-            { "position": "R54" },
-            { "position": "R55" },
-            { "position": "R61" },
-            { "position": "R62" },
-            { "position": "R63" },
-            { "position": "R64" },
-            { "position": "R65" },
-            { "position": "R66" },
-            { "position": "R67" },
-
-            { "position": "S5" },
-            { "position": "S6" },
-            { "position": "S7" },
-            { "position": "S8" },
-            { "position": "S9" },
-            { "position": "S10" },
-            { "position": "S11" },
-            { "position": "S17" },
-            { "position": "S18" },
-            { "position": "S19" },
-            { "position": "S20" },
-            { "position": "S21" },
-            { "position": "S22" },
-            { "position": "S23" },
-            { "position": "S24" },
-            { "position": "S25" },
-            { "position": "S26" },
-            { "position": "S27" },
-            { "position": "S28" },
-            { "position": "S29" },
-            { "position": "S30" },
-            { "position": "S31" },
-            { "position": "S32" },
-            { "position": "S33" },
-            { "position": "S34" },
-            { "position": "S35" },
-            { "position": "S37" },
-            { "position": "S38" },
-            { "position": "S39" },
-            { "position": "S40" },
-            { "position": "S41" },
-            { "position": "S42" },
-            { "position": "S43" },
-            { "position": "S44" },
-            { "position": "S45" },
-            { "position": "S46" },
-            { "position": "S47" },
-            { "position": "S48" },
-            { "position": "S49" },
-            { "position": "S50" },
-            { "position": "S51" },
-            { "position": "S52" },
-            { "position": "S53" },
-            { "position": "S54" },
-            { "position": "S55" },
-            { "position": "S61" },
-            { "position": "S62" },
-            { "position": "S63" },
-            { "position": "S64" },
-            { "position": "S65" },
-            { "position": "S66" },
-            { "position": "S67" }
+            { "position": "M68" }
         ]
     }
 }
