--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
         "lucide-react": "^0.475.0",
+        "react-router-dom": "^7.3.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     }
