--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/styled-components": "^5.1.34",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "@vitejs/plugin-react": "^4.2.0",
@@ -56,6 +57,7 @@
         "flowbite-react": "^0.10.2",
         "lucide-react": "^0.475.0",
         "react-router-dom": "^7.3.0",
+        "styled-components": "^6.1.15",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     }
