--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-icons": "^1.8",
         "filament/filament": "^3.2",
         "filament/infolists": "^3.2",
         "inertiajs/inertia-laravel": "^2.0",
