--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "midtrans/midtrans-php": "^2.6",
+        "ramsey/uuid": "*",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
