--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "midtrans/midtrans-php": "^2.6",
+        "njxqlus/filament-relation-manager-component": "*",
         "ramsey/uuid": "*",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "tightenco/ziggy": "^2.0"
