--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^2.9",
         "midtrans/midtrans-php": "^2.6",
         "njxqlus/filament-relation-manager-component": "*",
+        "predis/predis": "^2.3",
         "ramsey/uuid": "*",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "tightenco/ziggy": "^2.0"
