--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
         "clsx": "^2.1.1",
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
+        "laravel-echo": "^2.0.2",
         "lucide-react": "^0.475.0",
         "react-router-dom": "^7.3.0",
+        "socket.io-client": "^4.8.1",
         "styled-components": "^6.1.15",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
