feat image upload and styles

--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -121,4 +121,6 @@ jobs:
 
           # Run database migrations
           php artisan migrate --force
+          php artisan storage:link
+
           EOF
