--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -128,7 +128,7 @@ jobs:
           cat > ~/novatix/setups/deploy_laravel.sh << 'EOT'
           #!/bin/bash
           cd ~/novatix/app/develop
-          rm -rf storage/*
+          sudo rm -rf storage/*
           php artisan migrate:fresh --force --seed
           php artisan config:clear
           sudo php artisan cache:clear
