--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -128,8 +128,8 @@ jobs:
           cat > ~/novatix/setups/deploy_laravel.sh << 'EOT'
           #!/bin/bash
           cd ~/novatix/app/develop
-          sudo rm -rf storage/app/public/*
-          sudo rm -rf storage/app/private/*
+          # sudo rm -rf storage/app/public/*
+          # sudo rm -rf storage/app/private/*
           # php artisan migrate:fresh --force --seed
           php artisan config:clear
           sudo php artisan cache:clear
