--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "flowbite-react": "^0.10.2",
         "laravel-echo": "^2.0.2",
         "lucide-react": "^0.475.0",
+        "mqtt": "^5.12.0",
         "react-router-dom": "^7.3.0",
         "socket.io-client": "^4.8.1",
         "styled-components": "^6.1.15",
