--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "nunomaduro/termwind": "^2.0",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
