--- a/ex-nginx.conf
+++ b/ex-nginx.conf
@@ -1,7 +1,7 @@
-# Staging Real Dom staging-novatix.xyz
+# Staging Using ArachnoVa
 server {
     listen 80;
-    server_name staging-novatix.xyz *.staging-novatix.xyz;
+    server_name staging-novatix.arachnova.id *.staging-novatix.arachnova.id;
 
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
@@ -9,16 +9,17 @@ server {
 
 server {
     listen 443 ssl;
-    server_name staging-novatix.xyz *.staging-novatix.xyz;
+    server_name staging-novatix.arachnova.id *.staging-novatix.arachnova.id;
 
     root /var/www/novatix_staging/public;
     index index.php index.html index.htm;
 
-    ssl_certificate /etc/letsencrypt/live/staging-novatix.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/staging-novatix.xyz/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/staging-novatix.arachnova.id/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/staging-novatix.arachnova.id/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
+
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -35,10 +36,10 @@ server {
     access_log /var/log/nginx/novatix_staging_access.log;
 }
 
-# Production Real Dom novatix.id
+# Production Using ArachnoVa
 server {
     listen 80;
-    server_name novatix.id *.novatix.id;
+    server_name novatix.arachnova.id *.novatix.arachnova.id;
 
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
@@ -46,16 +47,17 @@ server {
 
 server {
     listen 443 ssl;
-    server_name novatix.id *.novatix.id;
+    server_name novatix.arachnova.id *.novatix.arachnova.id;
 
     root /var/www/novatix/public;
     index index.php index.html index.htm;
 
-    ssl_certificate /etc/letsencrypt/live/novatix.id/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/novatix.id/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/novatix.arachnova.id/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/novatix.arachnova.id/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
+
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
