--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: 🔧 Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.2
+          php-version: 8.3
           extensions: mbstring, bcmath, xml, pdo_mysql, pdo_sqlite
           tools: composer, phpunit
 
@@ -83,7 +83,7 @@ jobs:
           echo "Ensuring folder structure..."
           mkdir -p ~/novatix/app/develop ~/novatix/setups
 
-          # Ensure update_repo.sh exists
+          # update_repo.sh
           echo "Creating update_repo.sh..."
           cat > ~/novatix/setups/update_repo.sh << 'EOT'
           #!/bin/bash
@@ -104,53 +104,43 @@ jobs:
 
               git reset --hard HEAD
               git clean -fd
-
-              # Enable pulling by marking as safe
               git config --global --add safe.directory ~/novatix/app/develop
-
               git pull origin develop --force
           fi
-
           EOT
           chmod +x ~/novatix/setups/update_repo.sh
 
-          # Ensure install_dependencies.sh exists
+          # install_dependencies.sh
           echo "Creating install_dependencies.sh..."
           cat > ~/novatix/setups/install_dependencies.sh << 'EOT'
           #!/bin/bash
           cd ~/novatix/app/develop
 
-          # Ensure PHP SQLite extension is installed
-          echo "Installing php8.2-sqlite3..."
+          echo "Installing php8.3-sqlite3..."
           sudo apt update
-          sudo apt install php8.2-sqlite3 -y
-          sudo systemctl restart php8.2-fpm
+          sudo apt install php8.3-sqlite3 -y
+          sudo systemctl restart php8.3-fpm
 
-          # Install Laravel dependencies
           composer install --no-interaction --prefer-dist
-
           EOT
           chmod +x ~/novatix/setups/install_dependencies.sh
 
-          # Ensure deploy_laravel.sh exists
+          # deploy_laravel.sh
           echo "Creating deploy_laravel.sh..."
           cat > ~/novatix/setups/deploy_laravel.sh << 'EOT'
           #!/bin/bash
           cd ~/novatix/app/develop
-          # sudo rm -rf storage/app/public/*
-          # sudo rm -rf storage/app/private/*
-          # php artisan migrate:fresh --force --seed
           php artisan config:clear
           sudo php artisan cache:clear
           php artisan route:cache
           EOT
           chmod +x ~/novatix/setups/deploy_laravel.sh
 
-          # Ensure restart_services.sh exists
+          # restart_services.sh
           echo "Creating restart_services.sh..."
           cat > ~/novatix/setups/restart_services.sh << 'EOT'
           #!/bin/bash
-          sudo systemctl restart php8.2-fpm
+          sudo systemctl restart php8.3-fpm
           EOT
           chmod +x ~/novatix/setups/restart_services.sh
 
@@ -162,11 +152,11 @@ jobs:
       - name: Install Dependencies on VPS
         run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/install_dependencies.sh"
 
-      - name: Enable PHP 8.2 FPM and restart Apache
+      - name: Enable PHP 8.3 FPM and restart Apache
         run: |
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             sudo a2enmod proxy_fcgi setenvif
-            sudo a2enconf php8.2-fpm
+            sudo a2enconf php8.3-fpm
             sudo systemctl restart apache2
           EOF
 
@@ -191,47 +181,28 @@ jobs:
       - name: Deploy Laravel Project to VPS
         run: |
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
-          set -e  # Exit immediately if any command fails
-
-          # Ensure project directory exists
+          set -e
           sudo mkdir -p ~/novatix/app/develop
-
-          # Change permissions to allow www-data
           sudo chown -R www-data:www-data ~/novatix/app/develop
-
-          # Remove old symlink if exists, then create a new one
           sudo rm -rf /var/www/novatix_staging
           sudo ln -s ~/novatix/app/develop /var/www/novatix_staging
-
-          # Set proper ownership
           sudo chown -R www-data:www-data /var/www/novatix_staging
-
-          # Move into project directory
           cd /var/www/novatix_staging
 
-          # Install backend dependencies
           composer install --no-interaction --prefer-dist --optimize-autoloader
-
-          # Install frontend dependencies
           npm install
-
-          # Build frontend assets
           npm run build
 
-          # Ensure cache and storage directories exist
           mkdir -p storage/framework/{cache,sessions,views}
           mkdir -p storage/logs
           mkdir -p bootstrap/cache
 
-          # Set permissions
           sudo chown -R www-data:www-data storage bootstrap/cache
           sudo chmod -R 775 storage bootstrap/cache
 
-          # Cache configurations
           php artisan config:clear
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
           php artisan storage:link
-
           EOF
