fix some configs and db setups

--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -41,7 +41,7 @@ jobs:
           tools: composer, phpunit
 
       - name: 📦 Install Backend Dependencies
-        run: composer install --optimize-autoloader --no-interaction
+        run: composer install --optimize-autoloader --no-interaction --no-scripts --ignore-platform-reqs
 
       - name: 🛠 Set Up Laravel Environment
         run: |
