fix yaml migrations

--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -120,7 +120,7 @@ jobs:
           sudo chmod -R 775 /var/www/novatix/storage /var/www/novatix/bootstrap/cache
 
           # Run database migrations
-          php artisan migrate --force
+          php artisan migrate
           php artisan storage:link
 
           EOF
