--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -42,7 +42,7 @@ jobs:
                   rm -rf app/production
               fi
               echo "Cloning repository..."
-              git clone --branch main git@github.com:ArachnoVa-id/novatix.git app/production
+              git clone --branch main ${{ variables.GIT_REPO }} app/production
           else
               echo "Repository found. Pulling latest changes..."
               cd app/production
