fix retry fixing yaml

--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -1,5 +1,6 @@
 name: NovaTix VPS Production
 
+# This workflow is designed to deploy the NovaTix application to a VPS server.
 on:
   push:
     branches:
