--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -1,5 +1,6 @@
 name: NovaTix VPS Develop
 
+# This workflow is designed to deploy the NovaTix application to a VPS server.
 on:
   push:
     branches:
