--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -118,12 +118,21 @@ jobs:
           #!/bin/bash
           cd ~/novatix/app/develop
 
-          echo "Installing php8.3-sqlite3..."
+          echo "Adding Ondřej Surý's PPA for PHP 8.3..."
           sudo apt update
-          sudo apt install php8.3-sqlite3 -y
+          sudo apt install software-properties-common -y
+          sudo add-apt-repository ppa:ondrej/php -y
+          sudo apt update
+
+          echo "Installing PHP 8.3 and sqlite3 extension..."
+          sudo apt install php8.3 php8.3-fpm php8.3-sqlite3 -y
+
+          echo "Restarting php8.3-fpm service..."
           sudo systemctl restart php8.3-fpm
 
+          echo "Installing composer dependencies..."
           composer install --no-interaction --prefer-dist
+
           EOT
           chmod +x ~/novatix/setups/install_dependencies.sh
 
