--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -131,7 +131,19 @@ jobs:
           rm composer-setup.php
 
           composer install --no-interaction --prefer-dist --optimize-autoloader
+          # Laravel setup
+          cp .env.example .env
+          php artisan key:generate
+
           echo "Installing npm dependencies..."
+          npm install --legacy-peer-deps
+          npm run build
+
+          mkdir -p storage/framework/{cache,sessions,views}
+          mkdir -p storage/logs bootstrap/cache
+
+          sudo chown -R www-data:www-data storage bootstrap/cache
+          sudo chmod -R 775 storage bootstrap/cache
 
           if ! command -v apache2 >/dev/null 2>&1; then
             echo "Apache2 not found. Installing apache2..."
@@ -193,34 +205,14 @@ jobs:
     needs: vps-sync
 
     steps:
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/av_rsa
-          chmod 600 ~/.ssh/av_rsa
-          ssh-keyscan -H "${{ secrets.VPS_HOST }}" >> ~/.ssh/known_hosts
-
-      - name: Deploy Laravel Project to VPS
+      - name: Link Staging Directory
         run: |
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
           set -e
-          sudo mkdir -p ~/novatix/app/develop
-          sudo chown -R www-data:www-data ~/novatix/app/develop
           sudo rm -rf /var/www/novatix_staging
           sudo ln -s ~/novatix/app/develop /var/www/novatix_staging
           sudo chown -R www-data:www-data /var/www/novatix_staging
           cd /var/www/novatix_staging
-
-          composer install --no-interaction --prefer-dist --optimize-autoloader
-          npm install
-          npm run build
-
-          mkdir -p storage/framework/{cache,sessions,views}
-          mkdir -p storage/logs
-          mkdir -p bootstrap/cache
-
-          sudo chown -R www-data:www-data storage bootstrap/cache
-          sudo chmod -R 775 storage bootstrap/cache
 
           php artisan config:clear
           php artisan config:cache
