--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -126,8 +126,9 @@ jobs:
           sudo apt update
           sudo apt install php8.3 php8.3-cli php8.3-fpm php8.3-sqlite3 unzip curl git -y
 
+          echo "Installing Composer..."
           php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-          php composer-setup.php --install-dir=/usr/local/bin --filename=composer
+          sudo php composer-setup.php --install-dir=/usr/local/bin --filename=composer
           rm composer-setup.php
 
           composer install --no-interaction --prefer-dist --optimize-autoloader
